--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <section id="sec1">
       <div class="section-content max-w-4xl w-full">
         <img
-          src="images/maybank.png"
+          src="maybank.png"
           class="h-20 mx-auto mb-4"
           alt="Maybank Logo" />
         <div class="typewriter">
@@ -279,3 +279,4 @@
     </script>
   </body>
 </html>
+
