--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
         position: relative;
       }
 
-      /* PERBAIKAN: Menghapus CSS typewriter lama, diganti kursor blinking */
       .blinking-cursor {
         color: #ffc72c;
         font-weight: bold;
@@ -75,7 +74,6 @@
         }
       }
 
-      /* Partikel Api & Confetti */
       .fire-particle {
         position: absolute;
         width: 10px;
@@ -107,21 +105,59 @@
           opacity: 1;
         }
       }
+
+      @keyframes bounce {
+        0%,
+        20%,
+        50%,
+        80%,
+        100% {
+          transform: translateY(0);
+        }
+        40% {
+          transform: translateY(-15px);
+        }
+        60% {
+          transform: translateY(-7px);
+        }
+      }
+      .animate-bounce-slow {
+        animation: bounce 2.5s infinite;
+      }
     </style>
   </head>
   <body>
     <section id="sec1">
       <div class="section-content max-w-4xl w-full">
-        <img
-          src="maybank.png"
-          class="h-30 mx-auto mb-6"
-          alt="Maybank Logo" />
+        <img src="maybank.png" class="h-10 mx-auto mb-6" alt="Maybank Logo" />
 
-        <div class="min-h-[100px] sm:min-h-[50px]">
+        <div
+          class="min-h-[120px] sm:min-h-[100px] flex justify-center items-center">
           <h1
             id="typewriter-text"
-            class="text-2xl sm:text-3xl md:text-4xl text-white font-semibold"
-            data-text="Semuanya berawal dari sebuah mimpi..."></h1>
+            class="text-xl sm:text-2xl md:text-3xl text-white font-semibold"
+            data-text="“Let’s make this Independence Day,\nthe most unforgettable one — the Maybank way!”"></h1>
+        </div>
+      </div>
+      <div
+        id="scroll-indicator"
+        class="absolute bottom-8 left-1/2 -translate-x-1/2 transition-opacity duration-500">
+        <div class="animate-bounce-slow flex flex-col items-center">
+          <span class="text-xs uppercase tracking-widest text-white/70"
+            >Scroll</span
+          >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 text-white/70"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M19 14l-7 7m0 0l-7-7m7 7V3" />
+          </svg>
         </div>
       </div>
     </section>
@@ -192,45 +228,86 @@
       </div>
     </section>
 
-    <script>
-      // --- PERBAIKAN FINAL: FUNGSI TYPEWRITER BARU DENGAN JAVASCRIPT ---
-      function startTypewriter(element) {
-        const text = element.getAttribute("data-text");
-        let i = 0;
-        element.innerHTML = ""; // Kosongkan teks awal
+    <audio id="background-music" loop>
+      <source src="kemerdekaan.mp3" type="audio/mpeg" />
+      Browser Anda tidak mendukung elemen audio.
+    </audio>
 
-        // Tambahkan kursor
+    <script>
+      // 1. FUNGSI TYPEWRITER (JAVASCRIPT)
+      function startTypewriter(element) {
+        // Menggunakan \n sebagai penanda baris baru
+        const text = element.getAttribute("data-text").replace(/\\n/g, "<br>");
+        let i = 0;
+        let currentHTML = "";
+        element.innerHTML = "";
+
         const cursor = document.createElement("span");
         cursor.className = "blinking-cursor";
-        cursor.textContent = "|";
+        cursor.innerHTML = "|";
         element.parentNode.appendChild(cursor);
 
         const typing = setInterval(() => {
           if (i < text.length) {
-            element.innerHTML += text.charAt(i);
-            i++;
+            // Cek apakah karakter berikutnya adalah tag <br>
+            if (text.substring(i, i + 4) === "<br>") {
+              currentHTML += "<br>";
+              i += 4;
+            } else {
+              currentHTML += text.charAt(i);
+              i++;
+            }
+            element.innerHTML = currentHTML;
           } else {
             clearInterval(typing);
-            // Sembunyikan kursor setelah selesai
             cursor.style.display = "none";
           }
-        }, 100); // Kecepatan mengetik dalam milidetik
+        }, 80); // Kecepatan mengetik sedikit dipercepat
       }
 
-      // Intersection Observer untuk animasi saat scroll
+      // 2. LOGIKA INDIKATOR SCROLL
+      const scrollIndicator = document.getElementById("scroll-indicator");
+      if (scrollIndicator) {
+        window.addEventListener(
+          "scroll",
+          () => {
+            if (window.scrollY > 50) {
+              scrollIndicator.style.opacity = "0";
+            } else {
+              scrollIndicator.style.opacity = "1";
+            }
+          },
+          { passive: true }
+        );
+      }
+
+      // 3. OBSERVER UNTUK ANIMASI & BACKSOUND
       const sections = document.querySelectorAll("section");
       const typewriterEl = document.getElementById("typewriter-text");
+      const audioEl = document.getElementById("background-music");
       let typewriterStarted = false;
+      let musicPlayed = false;
 
       const observer = new IntersectionObserver(
         (entries) => {
           entries.forEach((entry) => {
             if (entry.isIntersecting) {
               entry.target.classList.add("is-visible");
-              // Jalankan typewriter hanya sekali saat section 1 terlihat
-              if (entry.target.id === "sec1" && !typewriterStarted) {
-                startTypewriter(typewriterEl);
-                typewriterStarted = true;
+              if (entry.target.id === "sec1") {
+                // Jalankan typewriter hanya sekali
+                if (!typewriterStarted) {
+                  startTypewriter(typewriterEl);
+                  typewriterStarted = true;
+                }
+                // Mainkan musik hanya sekali (setelah ada interaksi scroll)
+                if (!musicPlayed && audioEl) {
+                  audioEl.play().catch((error) => {
+                    console.log(
+                      "Autoplay musik diblokir oleh browser. Diperlukan interaksi pengguna."
+                    );
+                  });
+                  musicPlayed = true;
+                }
               }
             }
           });
@@ -239,7 +316,7 @@
       );
       sections.forEach((section) => observer.observe(section));
 
-      // Animasi partikel
+      // 4. ANIMASI PARTIKEL (API & KONFETI)
       const fireContainer = document.getElementById("fire-container");
       if (fireContainer) {
         for (let i = 0; i < 30; i++) {
@@ -262,7 +339,7 @@
         }
       }
 
-      // Countdown Timer
+      // 5. COUNTDOWN TIMER
       const countDownDate = new Date("Aug 17, 2025 00:00:00").getTime();
       const daysEl = document.getElementById("days"),
         hoursEl = document.getElementById("hours"),
@@ -299,5 +376,3 @@
     </script>
   </body>
 </html>
-
-
