--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet" />
     <link
       rel="icon"
-      href="https://www.maybank.co.id/favicon.ico"
+      href="https:maybank.png"
       type="image/x-icon" />
     <style>
       body { font-family: "Poppins", sans-serif; background-color: #000; }
@@ -51,7 +51,6 @@
     <div id="splash-screen" class="h-screen-custom flex flex-col justify-center items-center text-center p-6 bg-black transition-opacity duration-1000">
         <img src="https://www.maybank.co.id/assets/img/logo-maybank-yellow.png" class="h-12 mb-8" alt="Maybank Logo">
         <h1 class="text-3xl md:text-5xl font-bold text-white mb-4">Perayaan Kemerdekaan RI ke-80</h1>
-        <p class="text-white/80 mb-8">Pengalaman ini menggunakan musik. Siapkan diri Anda.</p>
         <button id="enter-button" class="bg-yellow-400 text-black font-bold py-3 px-8 rounded-full hover:bg-yellow-300 transition-all transform hover:scale-105">
             Mulai Perjalanan
         </button>
@@ -114,7 +113,7 @@
     </div>
     
     <audio id="background-music" loop>
-        <source src="https://firebasestorage.googleapis.com/v0/b/digital-clipping/o/assets%2F Tanah%20Airku%20-%20Lagu%20Wajib%20Nasional%20(Instrumental).mp3?alt=media&token=e9e623a3-3b10-4e3f-8083-200a58579471" type="audio/mpeg">
+        <source src="kemerdekaan.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
 
@@ -207,3 +206,4 @@
     </script>
   </body>
 </html>
+
