--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div id="splash-screen" class="h-screen-custom flex flex-col justify-center items-center text-center p-6 bg-black transition-opacity duration-1000">
-        <img src="https://www.maybank.co.id/assets/img/logo-maybank-yellow.png" class="h-12 mb-8" alt="Maybank Logo">
+        <img src="maybank.png" class="h-30 mb-8" alt="Maybank Logo">
         <h1 class="text-3xl md:text-5xl font-bold text-white mb-4">Perayaan Kemerdekaan RI ke-80</h1>
         <button id="enter-button" class="bg-yellow-400 text-black font-bold py-3 px-8 rounded-full hover:bg-yellow-300 transition-all transform hover:scale-105">
             Mulai Perjalanan
@@ -59,7 +59,7 @@
     <div id="main-content">
         <section id="sec1">
           <div class="section-content max-w-4xl w-full">
-            <img src="https://www.maybank.co.id/assets/img/logo-maybank-yellow.png" class="h-10 mx-auto mb-6" alt="Maybank Logo" />
+            <img src="maybank.png" class="h-10 mx-auto mb-6" alt="Maybank Logo" />
             <div class="min-h-[120px] sm:min-h-[100px] flex justify-center items-center">
               <h1 id="typewriter-text" class="text-xl sm:text-2xl md:text-3xl text-white font-semibold"
                 data-text="✨“Let’s make this Independence Day,\nthe most unforgettable one — the Maybank way!”"></h1>
@@ -206,4 +206,5 @@
     </script>
   </body>
 </html>
+
 
