--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <img src="maybank.png" class="h-10 mx-auto mb-6" alt="Maybank Logo" />
             <div class="min-h-[120px] sm:min-h-[100px] flex justify-center items-center">
               <h1 id="typewriter-text" class="text-xl sm:text-2xl md:text-3xl text-white font-semibold"
-                data-text="✨“Let’s make this Independence Day,\nthe most unforgettable one — the Maybank way!”"></h1>
+                data-text="Let’s make this Independence Day,\nthe most unforgettable one — the Maybank way!"></h1>
             </div>
           </div>
           <div id="scroll-indicator" class="absolute bottom-8 left-1/2 -translate-x-1/2 transition-opacity duration-500">
@@ -206,5 +206,6 @@
     </script>
   </body>
 </html>
+
 
 
